[package]
name = "thumbnail-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
image = { version = "0.24", default-features = false, features = ["webp", "jpeg", "png"] }
sled = "0.34"
base64 = "0.21"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
bytes = "1.5"
futures = "0.3"
